[1.136] fix broken link

--- a/hackathons.html
+++ b/hackathons.html
@@ -65,7 +65,7 @@ td {
 
 Помещение для проведения встреч, а так же ночлег для его участников,
 финансируется за счет
-<a href="donations.html">пожертвований проекту OpenBSD</a> или 
+<a href="https://www.openbsd.org/donations.html">пожертвований проекту OpenBSD</a> или
 <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>,
 тем не менее большинство разработчиков платят за свою поездку сами.
 Место проведения всегда выбирается с экономической точки зрения; как
