--- a/openbgpd/manual.html
+++ b/openbgpd/manual.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenBGPD: Manual Pages</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenBGPD: Документация</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD Manual Pages">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,26 +15,26 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">BGPD</font></a>
-<font color="#e00000">Manual Pages</font>
+<font color="#e00000">Документация</font>
 </h2>
 <hr>
 <p>
 
-Web manual pages are available from
-<a href="https://www.openbsd.org/">OpenBSD</a>.
-These manual pages reflect the latest development release of OpenBGPD.<p>
+Web руководства доступны в самой
+<a href="../index.html">OpenBSD</a>.
+Эти руководства относятся к последней версии OpenBGPD.<p>
 
 <ul>
  <li><a href="https://man.openbsd.org/bgpd">bgpd</a>
-      - Border Gateway Protocol daemon
+      - Border Gateway Protocol демон
  <li><a href="https://man.openbsd.org/bgpd.conf">bgpd.conf</a>
-      - Border Gateway Protocol daemon configuration file
+      - Border Gateway Protocol конфигурационный файл демона
  <li><a href="https://man.openbsd.org/bgpctl">bgpctl</a>
-      - control the Border Gateway Protocol daemon
+      - клиент для управления Border Gateway Protocol демоном
 </ul>
 
-The BGP protocol implemented in OpenBGPD is described in
-<a href="https://www.ietf.org/rfc/rfc4271.txt">RFC 4271</a>.
+Протокол BGP, реализованный в OpenBGPD, описан в
+<a href="https://rfc2.ru/4271.rfc/print">RFC 4271</a>.
 
 </body>
 </html>
