[ -- ] add link to local anoncvs.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       &nbsp;<a href="https://www.openbsd.org/faq/faq4.html#Download">Download</a><br>
       <p>
       <big><b>Исходники</b></big><br>
-      &nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+      &nbsp;<a href="anoncvs.html">AnonCVS</a>
       &nbsp;<a href="https://www.openbsd.org/cvsync.html">CVSync</a><br>
       &nbsp;<a href="https://cvsweb.openbsd.org/">CVS Web</a><br>
       &nbsp;<a href="https://github.com/openbsd">Проект на GitHub</a><br>
