--- a/openbgpd/index.html
+++ b/openbgpd/index.html
@@ -18,7 +18,7 @@
 &nbsp;<a href="papers.html">Доклады</a><br>
 &nbsp;<a href="users.html">Testimonials</a><br><p>
 <b><big>Для OpenBSD</big></b><br>
-&nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
+&nbsp;<a href="../anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.sbin/bgpd/">CVSWeb</a><br>
 </td>
     <td bgcolor="#0000cc" rowspan="2"><font size="1">&nbsp;</font></td>
