--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -18,7 +18,7 @@
 &nbsp;<a href="papers.html">Доклады</a><br>
 &nbsp;<a href="manual.html">Документация</a><br><p>
 <b><big>Для OpenBSD</big></b><br>
-&nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
+&nbsp;<a href="../anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a><br><p>
 <b><big>Для других ОС</big></b><br>
 &nbsp;<a href="portable.html">Releases</a><br>
