--- a/openssh/index.html
+++ b/openssh/index.html
@@ -27,7 +27,7 @@
 &nbsp;<a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a><p>
 <b><big>Для OpenBSD</big></b><br>
 &nbsp;<a href="https://www.openssh.com/openbsd.html">FTP</a>
-&nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
+&nbsp;<a href="../anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a><p>
 <b><big>Для других ОС</big></b><br>
 &nbsp;<a href="https://www.openssh.com/portable.html">Linux</a>
