[1.20] link to translated RFC-5905

--- a/openntpd/manual.html
+++ b/openntpd/manual.html
@@ -35,7 +35,7 @@ Web руководства доступны в самой
 
 Протокол NTP, реализованный в OpenNTPD, описан в
 <a href="https://www.ietf.org/rfc/rfc1305.txt">RFC 1305</a> и
-<a href="https://www.ietf.org/rfc/rfc5905.txt">RFC 5905</a>.
+<a href="https://rfc2.ru/5905.rfc/print">RFC 5905</a> (стандарт, описанный в RFC-5905, заменяет предшествующий стандарт RFC-1305).
 <p>
 
 Материал о реализации, а так же другая документация о протоколе
