--- a/openbgpd/papers.html
+++ b/openbgpd/papers.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenBGPD: Presentations and Papers</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenBGPD: Доклады и презентацииs</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenBGPD related papers and presentations">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,11 +15,11 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">BGPD</font></a>
-<font color="#e00000">Presentations and Papers</font>
+<font color="#e00000">Доклады и презентации</font>
 </h2>
 <hr>
 
-<h3>Presentation: RIPE 71</h3>
+<h3>Доклад на RIPE 71</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="https://www.openbsd.org/papers/2015_ripe71_openbsd.pdf">Current Status of OpenBSD / OpenBGPd</a>
@@ -27,7 +27,7 @@ Peter Hessler
 </strong></font><br>
 </blockquote>
 
-<h3>Presentation: BSDCan 2014</h3>
+<h3>Доклад на BSDCan 2014</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="http://bulabula.org/papers/2014/asiabsdcon/">OpenBGPD turns 10 years - Design, Implementation, Lessons learned</a>
@@ -35,7 +35,7 @@ Henning Brauer
 </strong></font><br>
 </blockquote>
 
-<h3>Presentation: AsiaBSDCon 2009</h3>
+<h3>Доклад на AsiaBSDCon 2009</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="https://www.openbsd.org/papers/asiabsdcon2009-bgpd/">
@@ -44,7 +44,7 @@ Claudio Jeker
 </strong></font><br>
 </blockquote>
 
-<h3>Presentation: LinuxTag May, 2006</h3>
+<h3>Доклад на LinuxTag May, 2006</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="https://www.openbsd.org/papers/linuxtag06-network/index.html">
@@ -53,59 +53,58 @@ Claudio Jeker
 </strong></font><br>
 </blockquote>
 
-<h3>Presentation: 21C3</h3>
+<h3>Доклад на 21C3</h3>
 <blockquote>
 <font color="#009000"><strong>
-<a href="http://bulabula.org/papers/21c3/">OpenBGPD and OpenNTPD</a>,
-Henning Brauer
-</strong></font><br>
-Presentation on <a href="https://man.openbsd.org/?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>
-that was given at
-<a href="http://www.ccc.de/congress/2004/">21C3: 21. Chaos Communication
-Congress</a>
-in Berlin, Germany in December 2004.
-These slides were a combined talk introducing both OpenBGPD and OpenNTPD.
+<a href="http://bulabula.org/papers/21c3/">OpenBGPD и OpenNTPD</a>,
+Henning Brauer</strong></font><br>
+Доклад о 
+<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+который был прочитан на
+<a href="http://www.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
+в Берлине (Германия), в декабре 2004 года.
+На слайдах представлены проекты OpenBGPD и OpenNTPD.
 </blockquote>
 
-<h3>Presentation: EuroBSDCon 2004</h3>
+<h3>Доклад на EuroBSDCon 2004</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="http://bulabula.org/papers/euroBSDCon2004/">A Secure BGP Implementation</a>,
 Henning Brauer
 </strong></font><br>
-Presentation on <a href="https://man.openbsd.org/?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>
-that was given at
+Доклад о
+<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+который был прочитан на
 <a href="http://www.eurobsdcon.org/">EuroBSDCon 2004</a>
-in Karlsruhe, Germany in October 2004.
-This presentation outlines implementation details and rationale behind BGPD and
-is an updated version of the Sucon 04 presentation.
+в Карлсруэ (Германия), в октябре 2004 года.
+В общих чертах описываются детали реализации BGPD.
 </blockquote>
 
-<h3>Presentation: SUCON 04</h3>
+<h3>Доклад на SUCON 04</h3>
 <blockquote>
 <font color="#009000"><strong>
-<a href="https://www.openbsd.org/papers/bgpd_sucon04/index.html">A Secure BGP Implementation</a>,
+<a href="http://www.openbsd.org/papers/bgpd_sucon04/index.html">A Secure BGP Implementation</a>,
 Henning Brauer
 </strong></font><br>
-Presentation on <a href="https://man.openbsd.org/?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>
-that was given at
-<a href="http://www.suug.ch/sucon/04/">SUCON 04</a>
-in Zurich, Switzerland in September 2004.
-This presentation outlines implementation details and rationale behind BGPD.
-<a href="https://www.openbsd.org/papers/bgpd_sucon04.tgz">Tarball</a> of the presentation for offline viewing.
+Доклад о
+<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+который был прочитан на
+<a href="http://www.suug.ch/sucon/04/">SUCON 04</a> в Цюрихе (Швейцария), в сентябре 2004 года.
+В общих чертах описывается детали реализации BGPD.
+<a href="http://www.openbsd.org/papers/bgpd_sucon04.tgz">Тарбол</a> со слайдами для просмотра в оффлайн.
 </blockquote>
 
-<h3>Presentation: FOSDEM 04</h3>
+<h3>Доклад на FOSDEM 04</h3>
 <blockquote>
 <font color="#009000"><strong>
-<a href="http://bulabula.org/papers/fosdem2004/">Implementing BGP in OpenBSD</a>
+<a href="http://bulabula.org/papers/fosdem2004/">Implementing BGP in OpenBSD</a>,
 Henning Brauer
 </strong></font><br>
-Presentation on <a href="https://man.openbsd.org/?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>
-that was given at
-<a href="http://www.fosdem.org/">FOSDEM 2004</a>
-in Brussels, Belgium in February 2004.
-This presentation outlines the process of writing bgpd.
+Доклад о
+<a href="http://www.openbsd.org/cgi-bin/man.cgi?query=bgpd&amp;apropos=0&amp;sektion=0&amp;manpath=OpenBSD+Current&amp;arch=i386&amp;format=html">BGPD</a>,
+который был прочитан на
+<a href="http://www.fosdem.org/">FOSDEM 2004</a> в Брюсcеле (Бельгия), в феврале 2004 года.
+Рассказывается о процессе написания bgpd.
 </blockquote>
 
 </body>
