--- a/openbgpd/index.html
+++ b/openbgpd/index.html
@@ -16,7 +16,7 @@
 &nbsp;<a href="goals.html">Цели проекта</a><br>
 &nbsp;<a href="manual.html">Документация</a><br>
 &nbsp;<a href="papers.html">Доклады</a><br>
-&nbsp;<a href="users.html">Testimonials</a><br><p>
+&nbsp;<a href="users.html">Отзывы</a><br><p>
 <b><big>Для OpenBSD</big></b><br>
 &nbsp;<a href="../anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.sbin/bgpd/">CVSWeb</a><br>
