--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       &nbsp;<a href="https://www.openbsd.org/mail.html">Почтовые рассылки</a><br>
       &nbsp;<a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
             <a href="https://www.openbsd.org/artwork.html">Artwork</a><br>
-      &nbsp;<a href="hackathons.html">Hackathons</a><br>
+      &nbsp;<a href="hackathons.html">Хакатоны</a><br>
       &nbsp;<a href="https://openbsd.org/support.html">Поддержка</a><br>
       <p>
       <big><b>Поддержка&nbsp;OpenBSD</b></big><br>
@@ -111,7 +111,7 @@
       <p>
       OpenBSD разрабатывается добровольцами. Процесс разработки, а также
       <a href="hackathons.html">встречи разработчиков</a> возможны благодаря финансовым взносам,
-      собранным <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
+      собранным <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
       Эти пожертвования гарантируют дальнейшую разработку OpenBSD, которая остается
       <a href="https://www.openbsd.org/policy.html">свободной</a> для всех.
     </td>
