--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenSSH: Goals</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenSSH: Цели проекта</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="the OpenSSH project goals page">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,55 +15,57 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Goals</font>
+<font color="#e00000">Цели проекта</font>
 </h2>
 <hr>
 
 <p>
-Our goal is simple: Since telnet and rlogin are insecure, all
-operating systems should ship with support for the SSH protocol
-included.
+Наша задача проста: Так как telnet и rlogin небезопасны,
+все операционные системы должны поставляться с поддержкой
+протокола SSH.
 <p>
 
-The SSH protocol is available in two incompatible varieties:
-SSH 1 and SSH 2.
+
+SSH протокол доступен в двух несовместимых вариантах:
+SSH 1 и SSH 2
 <p>
 
-The older SSH 1 protocol comes in two major sub-variants: protocol 1.3 and
-protocol 1.5.  Support for both has been removed from OpenSSH
-as of the <a href="https://www.openbsd.org/openssh/txt/release-7.6">7.6 release</a>.
-Both of used the asymmetric cryptography algorithm
+Cтарый SSH 1 протокол доступен в двух вариантах: 1.3 и 1.5.
+Поддержка обоих была удалена из OpenSSH начиная с
+<a href="https://www.openbsd.org/openssh/txt/release-7.6">версии 7.6</a>.
+Оба использовали асимметричный алгоритм шифрования
 <a href="https://man.openbsd.org/rsa">RSA</a>
-(for which the USA patent has expired, allowing full use by everyone)
-for key negotiation and authentication, 3DES and
-<a href="https://man.openbsd.org/blowfish">Blowfish</a> for privacy.
-It used a simple CRC for data integrity, which turns out to be flawed.
+(срок действия патента в США истёк, так что теперь его можно
+свободно использовать) для обмена ключами и аутентификации, 3DES
+и <a href="https://man.openbsd.org/blowfish">Blowfish</a> для
+конфиденциальности. Использовался простой CRC для целостности данных,
+который оказался ненадежным.
 <p>
 
-The second major variety of SSH is the SSH 2 protocol.  SSH 2 was
-invented to avoid the patent issues regarding RSA (patent issues which
-no longer apply, since the patent has expired), to fix the CRC data
-integrity problem that SSH1 has, and for a number of other technical
-reasons.  By using the asymmetric
+Второй вариант SSH - это вторая версия протокола SSH. Вторая версия была
+написана, чтобы, во-первых, избежать проблем с патентом RSA (более не
+существующей проблемы, так как срок действия патента истёк), во-вторых,
+чтобы решить проблему с CRC, которая была в первой версии, а так же по ряду
+технических проблем. Используя асимметричные алгоритмы
 <a href="https://man.openbsd.org/dsa">DSA</a>
-and
-<a href="https://man.openbsd.org/dh">DH</a>
-algorithms,
-protocol 2 avoids all patents.  The CRC problem is also solved by
-using a real
-<a href="https://man.openbsd.org/HMAC">HMAC</a>
-algorithm. The SSH 2 protocol supports many other choices for symmetric
-ciphers, as well as many other new features.
+и
+<a href="https://man.openbsd.org/dh">DH</a>, вторая версия не имеет
+проблем с патентами, а проблема с CRC решена в результате перехода на
+алгоритм
+<a href="https://man.openbsd.org/HMAC">HMAC</a>.
+Протокол SSH 2 поддерживает множество симметричных алгоритмов шифрования,
+а так же множество новых возможностей.
 <p>
 
-OpenSSH relies on the <a href="https://www.libressl.org">LibreSSL</a>
-library for some of its cryptographic routines, AES-GCM being one example.
+OpenSSH использует библиотеку <a href="https://www.libressl.org">LibreSSL</a>
+для некоторых своих криптографических операций, одним из примеров которой
+является AES-GCM.
 <p>
 
-Continuing that trend, the OpenBSD project members who worked on
-OpenSSH made a push at supporting the SSH 2 protocol as well.  This
-work was primarily done by Markus Friedl.  Around May 4, 2000, the
-SSH 2 protocol support was implemented sufficiently to be usable.
+Итак, продолжая работать, разработчики OpenBSD из команды OpenSSH,
+реализовали поддержку протокола SSH 2. Работа была проделана в основном
+Маркусом Фриедлом (Markus Friedl). 4 мая 2000 года поддержка протокола SSH 2
+была завершена и готова к использованию.
 
 <p>
 </body>
