--- a/openssh/users.html
+++ b/openssh/users.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenSSH: Users</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"> 
+<title>OpenSSH: Пользователи</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 <meta name="description" content="the OpenSSH integration page">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,16 +15,16 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">SSH</font></a>
-<font color="#e00000">Users</font>
+<font color="#e00000">Пользователи</font>
 </h2>
 <hr>
 
 <p>
-The following operating systems and products are known to integrate
-OpenSSH into the base system.
+Известно, что перечисленные операционные системы и продукты интегрировали
+OpenSSH, как один из базовых компонентов.
 <p>
-This list is in chronological order, with systems that integrated it
-first listed earlier.
+Список составлен в хронологическом порядке. Cистемы, которые раньше
+интегрировали OpenSSH, перечислены первыми.
 <p>
 
 <ul>
@@ -63,10 +63,10 @@ Cisco SN 5400 series storage routers</a>
 </ul>
 <p>
 
-We are certain there are many other vendors, systems, and products,
-but we prefer to work on the software rather than maintaining a list
-on a web page, so please only tell us about items missing on this list
-when it is important.
+Мы уверены, что есть много других систем и продуктов, но мы предпочитаем
+работать с ПО, а не поддерживать список на веб-странице, поэтому, пожалуйста,
+сообщайте нам об отсутствующих в этом списке системах только когда это
+действительно важно.
 
 <p>
 </body>
