--- a/openssh/index.html
+++ b/openssh/index.html
@@ -19,7 +19,7 @@
 &nbsp;<a href="features.html">Возможности</a><br>
 &nbsp;<a href="https://www.openssh.com/security.html">Безопасность</a><br>
 &nbsp;<a href="specs.html">Спецификации</a><br>
-&nbsp;<a href="users.html">Кто это использует</a><p>
+&nbsp;<a href="users.html">Пользователи</a><p>
 <b><big>Информация</big></b><br>
 &nbsp;<a href="manual.html">Руководства</a><br>
 &nbsp;<a href="report.html">Сообщить об ошибке</a><br>
