[1.538] updated links to own faq11.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -34,19 +34,19 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 
 <table>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/faq10.html#Patches"     >Security обновления</a></td>
+    <td><a href="https://www.openbsd.org/faq/faq10.html#Patches" >Security обновления</a></td>
     <td><a href="https://man.openbsd.org">man-cтраницы</a></td>
-    <td><a href="https://www.openbsd.org/faq/ports/index.html"       >Книга по портам</a></td>
+    <td><a href="https://www.openbsd.org/faq/ports/index.html"   >Книга по портам</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/upgrade64.html"         >Обновление до 6.4</a></td>
-    <td><a href="https://www.openbsd.org/mail.html"           >Почтовые рассылки</a></td>
-    <td><a href="https://www.openbsd.org/faq/ports/testing.html"     >Тестирование портов</a></td>
+    <td><a href="https://www.openbsd.org/faq/upgrade64.html"     >Обновление до 6.4</a></td>
+    <td><a href="https://www.openbsd.org/mail.html"              >Почтовые рассылки</a></td>
+    <td><a href="https://www.openbsd.org/faq/ports/testing.html" >Тестирование портов</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/current.html"           >Использование -current</a></td>
-    <td><a href="https://www.openbsd.org/report.html"         >Сообщить об ошибке</a></td>
-    <td><a href="https://www.openbsd.org/faq/pf/index.html"          >PF руководство</a></td>
+    <td><a href="https://www.openbsd.org/faq/current.html"       >Использование -current</a></td>
+    <td><a href="https://www.openbsd.org/report.html"            >Сообщить об ошибке</a></td>
+    <td><a href="https://www.openbsd.org/faq/pf/index.html"      >PF руководство</a></td>
   </tr>
 </table>
 
@@ -159,12 +159,12 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="https://www.openbsd.org/faq/faq8.html#GenNotConf">Об устройствах, которые "not configured" в dmesg</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq11.html">X Window System</a></h3>
+<h3><a href="faq11.html">X Window System</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq11.html#Intro"       >Введение в X</a>
-<li><a href="https://www.openbsd.org/faq/faq11.html#ConfigX"     >Конфигурация X</a>
-<li><a href="https://www.openbsd.org/faq/faq11.html#StartingX"   >Запуск X</a>
-<li><a href="https://www.openbsd.org/faq/faq11.html#CustomizingX">Настройка X</a>
+<li><a href="faq11.html#Intro"       >Введение в X</a>
+<li><a href="faq11.html#ConfigX"     >Конфигурация X</a>
+<li><a href="faq11.html#StartingX"   >Запуск X</a>
+<li><a href="faq11.html#CustomizingX">Настройка X</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq13.html">Мультимедия</a></h3>
