[1.538] links to the local faq15.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -88,18 +88,16 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="https://www.openbsd.org/faq/faq10.html#Dir"       >Directory Services</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq15.html">Работа с пакетами</a></h3>
+<h3><a href="faq15.html">Работа с пакетами</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq15.html#Intro"        >Введение</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#Mirror"       >Выбор зеркала</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#PkgFind"      >Поиск пакетов</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#PkgInstall"   >Установка пакетов</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#PkgUpdate"    >Обновление пакетов</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#PkgRemove"    >Удаление пакетов</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#PkgDup"       >Duplicating Installed Packages on Another
-                                       Machine</a>
-<li><a href="https://www.openbsd.org/faq/faq15.html#PkgPartial"   >Incomplete Package Installation or
-                                       Removal</a>
+<li><a href="faq15.html#Intro"        >Введение</a>
+<li><a href="faq15.html#Mirror"       >Выбор зеркала</a>
+<li><a href="faq15.html#PkgFind"      >Поиск пакетов</a>
+<li><a href="faq15.html#PkgInstall"   >Установка пакетов</a>
+<li><a href="faq15.html#PkgUpdate"    >Обновление пакетов</a>
+<li><a href="faq15.html#PkgRemove"    >Удаление пакетов</a>
+<li><a href="faq15.html#PkgDup"       >Дублирование установленных пакетов на другую машину</a>
+<li><a href="faq15.html#PkgPartial"   >Незаконченная установка или удаление пакета</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq5.html">Сборка системы из исходников</a></h3>
