--- a/faq/faq15.html
+++ b/faq/faq15.html
@@ -279,9 +279,9 @@ Wait for the mirrors to catch up and try again.
 
 <h2 id="PkgUpdate">Обновление пакетов</h2>
 
-Let's say you had an older version of unzip installed before upgrading this
-box to the latest OpenBSD release.
-You can easily upgrade the package to the newer version like this:
+Предположим, у вас была старая версия unzip, установленная ещё до
+обновления OpenBSD. В этом случае обновить пакет до последней доступной версии
+можно вот так:
 
 <pre class="cmdbox">
 # <b>pkg_add -u unzip</b>
@@ -289,14 +289,14 @@ unzip-5.52->unzip-5.52p0: ok
 Read shared items: ok
 </pre>
 
-When a package has dependencies, they are also examined for updates.
-Invoking <a href="https://man.openbsd.org/pkg_add">pkg_add(1)</a> with
-only the <code>-u</code> flag will try to update all installed packages.
-This is highly recommended over updating individual packages on their own.
+Если у пакета есть зависимости, они так же проверяются на наличие обновлений.
+При запуске <a href="https://man.openbsd.org/pkg_add">pkg_add(1)</a> с параметром
+<code>-u</code> будут обновлены все установленные пакеты. Настоятельно
+рекомендуется обновляться именно так, нежели обновлять каждый пакет по отдельности.
 
 <h2 id="PkgRemove">Удаление пакетов</h2>
 
-To remove a package, simply take the name of the package and use
+Чтобы удалить пакет, просто используйте его имя как агрумент при запуске
 <a href="https://man.openbsd.org/pkg_delete">pkg_delete(1)</a>.
 
 <pre class="cmdbox">
@@ -305,9 +305,9 @@ screen-4.0.3p6: ok
 Read shared items: ok
 </pre>
 
-Again, modified configuration files will not be removed.
-Unneeded dependencies can be trimmed by running <code>pkg_delete -a</code>
-at any time.
+Как уже говорилось, измененные конфигурационные файлы не будут удалены.
+От ненужных зависимостей в любое время можно избавиться командой
+<code>pkg_delete -a</code>.
 
 <h2 id="PkgDup">Дублирование установленных пакетов на другую машину</h2>
 
